html code and vertical align fix
fix commit

--- a/client/public/playScreen.css
+++ b/client/public/playScreen.css
@@ -25,8 +25,8 @@ button{
     height: 15vmin;
     left: 50%;
     top: 50%;
-    border-radius: 8vmin;
     transform: translate(-50%,-50%);
+    border-radius: 8vmin;
     background-color: orange;
     text-align: center; 
     z-index: 1;
@@ -39,4 +39,12 @@ button{
     transform: translate(-50%, -50%); 
     font-size: 4vmin;
     color: black;
+}
+
+/* Mega bra //Pontus */	
+@media (max-width: 768px) {
+   .noPadding{
+    padding: 0 !important;
+    height: 50%;
+   }
 }
